# carmaker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  validate_trajectory.py
src/: README.md  pyproject.toml
src/carmaker_bringup/: CMakeLists.txt  package.xml
src/carmaker_bringup/launch/: bringup.launch
src/carmaker_control/: CMakeLists.txt  package.xml
src/carmaker_control/cfg/: CarmakerControl.cfg
src/carmaker_control/config/: control_params.yaml
src/carmaker_control/docs/: CONTROL_PIPLINE.md  Hyundai_Ioniq_5_ailab.md
src/carmaker_control/include/carmaker_control/: control_node.h  pid.h  pid.hpp  stanley.h  stanley.hpp
src/carmaker_control/launch/: control.launch
src/carmaker_control/src/: control_node.cpp  pid.cpp  stanley.cpp
src/carmaker_control/tools/: extract_trajectory.py
src/carmaker_gateway/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/carmaker_gateway/config/: gateway_params.yaml
src/carmaker_gateway/include/carmaker_gateway/: gateway_nodelet.h
src/carmaker_gateway/launch/: gateway.launch
src/carmaker_gateway/src/: gateway_nodelet.cpp
src/carmaker_image/: CMakeLists.txt  README.md  package.xml
src/carmaker_image/config/: segmentation_unet.yaml
src/carmaker_image/data/: .gitignore
src/carmaker_image/data/mask/: front_GT.json  left_GT.json  rear_GT.json  right_GT.json
src/carmaker_image/data_final/mask/: front_GT.json  left_GT.json
src/carmaker_image/launch/: apply_mask.launch  batch_extract.launch  extract_bag_images.launch  segmentation_debug_dataset.launch  segmentation_train.launch
src/carmaker_image/scripts/: apply_mask.py  batch_extract.py  extract_bag_images.py  segmentation_debug_dataset.py  segmentation_train.py
src/carmaker_image/scripts/segmentation/: __init__.py  adapters.py  dataset.py  debug_dataset.py  models.py  train.py
src/carmaker_image_pipeline/: CMakeLists.txt  README.md  package.xml
src/carmaker_image_pipeline/data/mask/: front_GT.json  left_GT.json  rear_GT.json  right_GT.json
src/carmaker_image_pipeline/launch/: auto_mask_gt.launch  extract_bag_images.launch
src/carmaker_image_pipeline/scripts/: apply_mask.py  auto_mask_gt.py  extract_bag_images.py  make_mask.py
src/carmaker_image_synchronizer/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/carmaker_image_synchronizer/config/: image_synchronizer_params.yaml
src/carmaker_image_synchronizer/include/carmaker_image_synchronizer/: image_synchronizer_nodelet.h
src/carmaker_image_synchronizer/launch/: image_synchronizer.launch
src/carmaker_image_synchronizer/src/: image_synchronizer_nodelet.cpp
src/carmaker_localization/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/carmaker_localization/config/: Test.osm  localization_params.yaml  vehicle_params.yaml
src/carmaker_localization/data/bags/: .gitignore
src/carmaker_localization/data/csv/: .gitignore
src/carmaker_localization/docs/: Design.md  EKF.md  ICP_Evaluation_Pipeline.md
src/carmaker_localization/include/carmaker_localization/: ekf_core.h  evaluation_utils.h  feature_extractor.h  feature_loader_base.h  (+13 more)
src/carmaker_localization/launch/: ekf_metrics_live.launch  evaluator.launch  localization.launch
src/carmaker_localization/resources/: icp_debug_template.html
src/carmaker_localization/scripts/: analyze_evaluation.py  auto_bag_collector.py
src/carmaker_localization/src/: bag_evaluator.cpp  dummy_impl.cpp  ekf_core.cpp  evaluation_utils.cpp  feature_extractor.cpp  icp_matcher.cpp  icp_registration.cpp  localization_nodelet.cpp  osm_feature_loader.cpp  osm_landmark_loader.cpp  osm_map_loader.cpp  state_buffer.cpp  static_evaluator.cpp  visualizer.cpp
src/carmaker_localization/tools/: evaluate_ekf.py
src/carmaker_msgs/: CMakeLists.txt  package.xml
src/carmaker_msgs/msg/: ArrivalError.msg  CameraBundle.msg  CameraData.msg  Control_Signal.msg  DynamicsInfo.msg  IcpRegistrationMetrics.msg  LocalFeature.msg  LocalFeatures.msg  Object.msg  ObjectState.msg  Objects.msg  SyncedData.msg  TrajectoryPath.msg  TrajectoryPoint.msg  UAQ_Out.msg
src/carmaker_planning/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/carmaker_planning/config/: global_planner.rviz  global_planner_params.yaml  local_planner_params.yaml  parking_scenario_params.yaml  planner.rviz
src/carmaker_planning/docs/: RULE.md
src/carmaker_planning/launch/: global_planner.launch  planner.launch
src/carmaker_planning/src/: global_map.cpp  global_planner.cpp  global_planner_nodelet.cpp  hybrid_astar.cpp  local_planner.cpp  local_planner_nodelet.cpp  post_processing.cpp  reeds_shepp.cpp  ros_utils.cpp  scenario_manager_node.cpp  trajectory_state_machine.cpp  visualizer.cpp
src/carmaker_planning/test/: test_quintic_path_fitter.cpp  test_trajectory_state_machine.cpp
src/carmaker_planning/tools/: validate_trajectory.py
src/carmaker_teleop/: CMakeLists.txt  README.md  package.xml
src/carmaker_teleop/launch/: keyboard_teleop.launch
src/carmaker_teleop/scripts/: keyboard_teleop.py
src/segmentation/: __init__.py  adapters.py  dataset.py  debug_dataset.py  inference.py  losses.py  metrics.py  models.py  train.py  visualization.py
src/segmentation/config/: segmentation_unet.yaml
src/segmentation/docs/: SEGMENTATION_TRAINING.md
src/segmentation/tools/: __init__.py  debug_dataset.py  evaluate_checkpoint.py  plot_tensorboard_csv.py  plot_tensorboard_tag.py  profile_vram.py  verify_predictor.py
src/segmentation/utils/: __init__.py  visualization.py  visualization_gpu.py
src/segmentation_colab/: SEGMENTATION_COLAB.md  segmentation_colab.ipynb  segmentation_unet_colab.yaml
src/segmentation_ros/: CMakeLists.txt  package.xml
src/segmentation_ros/config/: segmentation_inference.yaml
src/segmentation_ros/docs/: SEGMENTATION_ROS_INTERFACE.md
src/segmentation_ros/launch/: bundle_image_visualizer.launch  segmentation_inference.launch
src/segmentation_ros/scripts/: bundle_image_visualizer_node.py  segmentation_inference_node.py
src/segmentation_ros/tools/: compare_bags_sync.py
(+42 files in other folders)
