[project]
name = "ailab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "opencv-python", "matplotlib", "scipy", "scikit-learn", "scikit-image", "pandas", "open3d", "pyre-check"]

[project.optional-dependencies]
cpu = ["torch==2.11.0", "torchvision"]
gpu = ["torch==2.11.0", "torchvision"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
conflicts = [
    [ { extra = "cpu" }, { extra = "gpu" } ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "extra == 'cpu'" },
    { index = "pytorch-cu128", marker = "extra == 'gpu' and extra != 'cpu'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "extra == 'cpu'" },
    { index = "pytorch-cu128", marker = "extra == 'gpu' and extra != 'cpu'" },
]
