[project]
name = "ailab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "opencv-python", "matplotlib", "scipy", "scikit-learn", "scikit-image", "pandas", "open3d", "pyre-check", "pyyaml", "tensorboard", "tqdm"]

[project.optional-dependencies]
cpu = ["torch==2.4.0", "torchvision==0.19.0", "torchaudio==2.4.0"]
gpu = ["torch==2.4.0", "torchvision==0.19.0", "torchaudio==2.4.0"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
conflicts = [
    [ { extra = "cpu" }, { extra = "gpu" } ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "gpu" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu121", extra = "gpu" },
]
