<?xml version="1.0"?>
<package format="2">
  <name>carmaker_control</name>
  <version>0.1.0</version>
  <description>PID speed and Stanley steering controller for CarMaker trajectories.</description>

  <maintainer email="admin@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>carmaker_msgs</depend>

  <export/>
</package>
