<?xml version="1.0"?>
<package format="2">
  <name>carmaker_image_pipeline</name>
  <version>0.1.0</version>
  <description>CarMaker image pipeline package for raw image/GT data handling and GT post-processing.</description>

  <maintainer email="admin@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export/>
</package>
