<?xml version="1.0"?>
<package format="2">
  <name>carmaker_msgs</name>
  <version>0.1.0</version>
  <description>Custom CarMaker ROS messages.</description>

  <maintainer email="admin@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
