<?xml version="1.0"?>
<package format="2">
  <name>carmaker_planning</name>
  <version>0.1.0</version>
  <description>Global Kinodynamic Planner (Hybrid A* with Reverse) for CarMaker</description>
  <maintainer email="admin@example.com">admin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>diagnostic_updater</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>carmaker_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
