<?xml version="1.0"?>
<package format="2">
  <name>segmentation_ros</name>
  <version>0.1.0</version>
  <description>ROS1 inference node for CarMaker semantic segmentation.</description>

  <maintainer email="admin@example.com">admin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
